--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,14 @@
 {
-  "recommendations": ["svelte.svelte-vscode"]
+	"recommendations": [
+		"arifbudimanar.arifcode-theme",
+		"vivaxy.vscode-conventional-commits",
+		"vunguyentuan.vscode-css-variables",
+		"eamodio.gitlens",
+		"VisualStudioExptTeam.vscodeintellicode",
+		"christian-kohler.path-intellisense",
+		"esbenp.prettier-vscode",
+		"fivethree.vscode-svelte-snippets",
+		"svelte.svelte-vscode",
+		"ardenivanov.svelte-intellisense"
+	]
 }
