--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"serve-dev": "tsc --project server && node ./server/dist/index.js",
-		"serve-prod": "tsc --project server && vite build client && node ./server/dist/index.js production"
+		"serve-dev": "tsc --project shared && tsc --project server && node ./server/dist/index.js",
+		"serve-prod": "tsc --project shared && tsc --project server && vite build client && node ./server/dist/index.js production"
 	},
 	"devDependencies": {
 		"@sveltejs/vite-plugin-svelte": "^3.0.1",
@@ -21,6 +21,7 @@
 		"vite": "^5.0.8"
 	},
 	"dependencies": {
+		"@internal/shared": "file:shared",
 		"@types/express": "^4.17.21",
 		"@types/node": "^20.11.5",
 		"express": "^4.18.2",
