refactor: :wrench: Updated VSC extensions, updated npm dependencies, console log server URL on startup

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -9,6 +9,7 @@
 		"esbenp.prettier-vscode",
 		"fivethree.vscode-svelte-snippets",
 		"svelte.svelte-vscode",
-		"ardenivanov.svelte-intellisense"
+		"ardenivanov.svelte-intellisense",
+		"meganrogge.template-string-converter"
 	]
 }
